# yepbuddy-hermes

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: topic_routes.example.json
docs/superpowers/plans/: 2026-06-28-android-telegram-openai-harness.md
prompts/: cardnews.md  threads.md
scripts/: doctor.sh  install_android.sh  install_termux.sh  run_hermes.sh  run_termux.sh  setup_portal.sh  update_android.sh  update_termux.sh
src/hermes/: __init__.py  bot.py  config.py  hermes.py  hermes_client.py  router.py  storage.py
src/hermes/plugins/: __init__.py  base.py  stubs.py
src/termux_telegram_assistant/: __init__.py  __main__.py  bot.py  config.py  harness.py  openai_client.py  router.py  security.py
src/termux_telegram_assistant/plugins/: base.py  stubs.py
tests/: test_harness.py  test_hermes.py  test_router.py  test_storage.py
