[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "termux-telegram-assistant"
version = "0.1.0"
description = "Android Termux용 보안 중심 Telegram forum-topic 개인 비서 뼈대."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openai>=2.11.0,<3",
  "python-dotenv>=1.0.1,<2",
  "python-telegram-bot>=22.5,<23",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
]

[project.scripts]
termux-assistant = "termux_telegram_assistant.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
